# pimp_my_jira

./: .envrc  .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  flake.nix  pyproject.toml  test.yaml
src/pmj/: main.py
